Pull all of branches/woodlocks into trunk. Command used was:
  svn merge --reintegrate ^/branches/woodlocks

WARNING: /trunk NOW USES SVN 1.5+-STYLE MERGING

Since --reintegrate was used, branches/woodlocks will be deleted in the next commit (following instructions at http://svnbook.red-bean.com/nightly/en/svn.branchmerge.basicmerging.html ).


git-svn-id: https://mifos.svn.sourceforge.net/svnroot/mifos/trunk@16428 a8845c50-7012-0410-95d3-8e1449b9b1e4